run docker compose as user on ubuntu

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,9 @@ services:
 
   app:
     build: .
-    env_file: .env
+    env_file:
+      - .env
+    user: $UID
     volumes:
       - .:/usr/src/app
     ports:
